Small additions to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <title>Hello Cousera</title>
 </head>
 <body>
-    <h3>Hello Cousera</h3>
+    <h3>Hello Cousera its a amazing course</h3>
     <!-- id is uniqeue so no other tag or element would have the same id -->
     <!-- all the attributes can be defined in the class in css and can be used in multiple tags or elements -->
     <div id = "mainBox" class = "redBg">
