--- a/site/index.html
+++ b/site/index.html
@@ -7,24 +7,22 @@
     <title>Hello Cousera</title>
 </head>
 <body>
-    <h3>Hello Cousera its a amazing course</h3>
+    <h3>Hello Aoun Cake!</h3>
     <!-- id is uniqeue so no other tag or element would have the same id -->
     <!-- all the attributes can be defined in the class in css and can be used in multiple tags or elements -->
     <div id = "mainBox" class = "redBg">
-        This is main box
+        So How are you doing sucker!
         <span class="redBg blackBorder"></span>
         <span id="mainSpan"></span>
     </div>
 
     <!-- Emmet takes div tag as default -->
-    <div class="blackBackground">this is the 0th span</div>
+    <div class="blackBackground">you should fuck your own self</div>
 
     <!-- Creating multiple elements using Emmet  -->
     <!-- span.myclass.myclass2.myClass3*4 + <Tab> to print 4 similar elements using Emmet -->
-        <span class="myclass myclass2 myClass3">first</span>
-        <span class="myclass myclass2 myClass3">Second</span>
-        <span class="myclass myclass2 myClass3">third</span>
-        <span class="myclass myclass2 myClass3">forth</span>
+        <span class="myclass myclass2 myClass3">go ahead and fuck yourself man!! woooh woooh go go maan</span>
+        
     
 
 </body>
