--- a/site/index.html
+++ b/site/index.html
@@ -11,10 +11,12 @@
     
     <style>
         label{
+            color: white;
             font-family:'Poppins', sans-serif;
             font-size: 20px;
         }
-        h2{
+        h2{ 
+            color: rgb(63, 200, 241);
             font-family:'Poppins', sans-serif;
             font-size: 40px;
             text-align: center;
@@ -25,14 +27,17 @@
             font-size: 20px;
             text-align: center;
             font-weight: bold;
-            color: white;
+            color: black;
+        }
+        body{
+            background-image: url(https://wallpaperaccess.com/full/32819.jpg);
         }
     </style>
 </head>
 <body>
     <h2>This is HTML forms tutorial</h2>
     <!-- this MARQUEE is copied from internet dont know how it works -->
-    <MARQUEE bgcolor="purple" loop="-5" scrollamount="20" width="100%">Please be careful and provide the information correctly Thank u from Cheepa.</MARQUEE>
+    <MARQUEE bgcolor="red" loop="-5" scrollamount="20" width="100%">Please be careful and provide the information correctly Thank u from Cheepa.</MARQUEE>
 
     <!-- form tag means that data is saved data as a form -->
     <form action="backend.php">
