sorry another one

--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@
             color: black;
         }
         body{
-            background-image: url(https://wallpaperaccess.com/full/32819.jpg);
+            background-image: url("https://i0.wp.com/data.whicdn.com/images/340088952/original.jpg");
         }
     </style>
 </head>
