--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@
             color: black;
         }
         body{
-            background-image: url("https://i.pinimg.com/originals/9c/57/b6/9c57b65f8e15db38ebb6560fd6c3d210.jpg");
+            background-image: url("https://www.onespan.com/sites/default/files/styles/blog_detail_image/public/blog/images/HiRes-1.jpg?itok=ekAayoTJ");
         }
     </style>
 </head>
