--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
         body{
             background-image: url("https://www.onespan.com/sites/default/files/styles/blog_detail_image/public/blog/images/HiRes-1.jpg?itok=ekAayoTJ");
             background-repeat: no-repeat;
-            background-position: center center;
+            background-position: center;
         }
     </style>
 </head>
