First page modification

--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h2>This is HTML forms tutorial</h2>
+    <h2>CHEEPA Form Filling</h2>
     <!-- this MARQUEE is copied from internet dont know how it works -->
     <MARQUEE bgcolor="red" loop="-5" scrollamount="20" width="100%">Please be careful and provide the information correctly Thank u from Cheepa.</MARQUEE>
 
