--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,7 @@
             font-size: 20px;
         }
         h2{ 
-            color: rgb(63, 200, 241);
+            color: rgb(110 255 0);
             font-family:'Poppins', sans-serif;
             font-size: 40px;
             text-align: center;
@@ -28,22 +28,22 @@
             text-align: center;
             font-weight: bold;
             color: black;
+            background-color: rgb(191 191 191 / 86%);
         }
         body{
-            background-image: url("https://www.onespan.com/sites/default/files/styles/blog_detail_image/public/blog/images/HiRes-1.jpg?itok=ekAayoTJ");
+            background-color: rgb(12 25 51 / 86%);
             background-repeat: no-repeat;
             background-position: center;
+
         }
     </style>
 </head>
 <body>
-<<<<<<< HEAD
+
     <h2>CHEEPA Form Filling</h2>
-=======
-    <h2>Form filling</h2>
->>>>>>> 62a64e79cdc7b6011a3dd1fbb94833949c8a918a
+
     <!-- this MARQUEE is copied from internet dont know how it works -->
-    <MARQUEE bgcolor="red" loop="-5" scrollamount="20" width="100%">Please be careful and provide the information correctly Thank u from Cheepa.</MARQUEE>
+    <MARQUEE  loop="-5" scrollamount="20" width="100%">Please be careful and provide the information correctly Thank u from Cheepa.</MARQUEE>
 
     <!-- form tag means that data is saved data as a form -->
     <form action="backend.php">
