--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
     
     <style>
+
         label{
             color: white;
             font-family:'Poppins', sans-serif;
@@ -92,9 +93,14 @@
         <div>
             
             <!-- having same name in different input means that only one input can be used at a time -->
-            <label for="Male">GENDER: </label><label for="Male">Male:</label><input type="radio" name="myGender" id = "Male"> 
-            <label for="FeMale">Female:</label> <input type="radio" name="myGender" id = "FeMale"> 
-            <label for="other">Other:</label><input type="radio" name="myGender" id = "other">
+            <label for="Male">GENDER: </label>
+            <br>
+            <label for="Male">Male:</label>
+            <input type="radio" name="myGender" id = "Male"> 
+            <label for="FeMale">Female:</label> 
+            <input type="radio" name="myGender" id = "FeMale"> 
+            <label for="other">Other:</label>
+            <input type="radio" name="myGender" id = "other">
         </div>
         <br>
         <div>
